# SaavyGambler

./: .env.example  .gitignore  README.md  gui_main.py  index.html  package-lock.json  package.json  pyproject.toml
android/: buildozer.spec
saavygambler/: __init__.py  cli.py  config.py  models.py
saavygambler/app/: main.py
saavygambler/gui/: __init__.py  __main__.py  app.py  controller.py
saavygambler/providers/: thesportsdb.py
saavygambler/services/: fantasy.py
src/: App.tsx
src/pages/: Dashboard.tsx  Home.tsx
src/services/: api.ts
src/types/: index.ts
stattrackerpro/: __init__.py  cli.py  config.py  models.py
stattrackerpro/app/: main.py  schemas.py
stattrackerpro/gui/: __init__.py  __main__.py  app.py  controller.py
stattrackerpro/providers/: api_client.py  base.py  thesportsdb.py
stattrackerpro/services/: analytics.py  prediction.py  stat_collector.py
tests/: test_analytics_service.py  test_fantasy_projector.py  test_gui_controller.py  test_prediction_engine.py  test_thesportsdb_provider.py
